--- a/dapp/src/views/index.pug
+++ b/dapp/src/views/index.pug
@@ -31,6 +31,9 @@ html
                         svg(xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-moon" style="margin-right: 5px;" viewBox="0 0 16 16")
                            path(d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278zM4.858 1.311A7.269 7.269 0 0 0 1.025 7.71c0 4.02 3.279 7.276 7.319 7.276a7.316 7.316 0 0 0 5.205-2.162c-.337.042-.68.063-1.029.063-4.61 0-8.343-3.714-8.343-8.29 0-1.167.242-2.278.681-3.286z")
                         a(class=`dropdown-item ${themeclass}` href="#") Dark mode
+            div(class="btn-group")
+               button(type="button" class=`btn themed-color${themeclass} get-nfts` id="getNFTsButton" onclick=`window.open('${getNFTsMarketplaceURL}', '_blank')`)= `GET ${nftProjectName.toUpperCase()}`
+                  img(src=`${getNFTsIconURL}` width="30" height="30" style="margin-left: 5px;")   
   
       div(class="modal modal-dialog modal-lg fade" id="messageBox" tabindex="-1" aria-labelledby="messageBoxLabel" aria-hidden="true")
          div(class="modal-dialog")
