--- a/dapp/src/views/index.pug
+++ b/dapp/src/views/index.pug
@@ -85,6 +85,7 @@ html
             a(href=`${navWebpage}` class=`link-row${themeclass} flex-fill padding`) WEBPAGE
             a(href=`${navTwitter}` class=`link-row${themeclass} flex-fill padding`) TWITTER
             a(href=`${navDiscord}` class=`link-row${themeclass} flex-fill padding`) DISCORD
+            a(href=`${navSupport}` class=`link-row${themeclass} flex-fill padding`) SUPPORT
 
       div(class="modal modal-dialog-scrollable modal-xl fade" id="selectNFTsDialog" tabindex="-1" aria-labelledby="selectNFTsDialogLabel" aria-hidden="true")
          div(class="modal-dialog")
