Minor updates * Latest smart contract with one less validation test * Support link now also available in the about page * Download Plutus Script button now creates file swap-pool-script.plutus

--- a/dapp/src/views/about.pug
+++ b/dapp/src/views/about.pug
@@ -36,6 +36,7 @@ html
             a(href=`${navWebpage}` class=`link-row${themeclass} flex-fill padding`) WEBPAGE
             a(href=`${navTwitter}` class=`link-row${themeclass} flex-fill padding`) TWITTER
             a(href=`${navDiscord}` class=`link-row${themeclass} flex-fill padding`) DISCORD
+            a(href=`${navSupport}` class=`link-row${themeclass} flex-fill padding`) SUPPORT
 
       -var onLoad = `setActiveTheme('${themeclass}');`
       script !{onLoad}
