Example about text sections and click logo to return to main page * Added some example code for the text sections on About page to make it easier to get started * New stylesheet class for the about text sections * Added link back to main page in the top page logo of About and Admin pages

--- a/dapp/public/stylesheets/styles.css
+++ b/dapp/public/stylesheets/styles.css
@@ -448,3 +448,10 @@ a.connect-buttondark-mode {
     color: inherit;
     text-decoration: none;
 }
+
+.about-section {
+    text-align: left; 
+    margin-left: 2cm;
+    margin-right: 2cm;
+    margin-bottom: 0.5cm;
+}
