--- a/dapp/src/views/about.pug
+++ b/dapp/src/views/about.pug
@@ -9,7 +9,7 @@ html
    body(class=`${themeclass}`)
       
       div(class="d-flex flex-row justify-content-around padding")
-         div(class="name-and-logo" class="justify-content-start")
+         div(class="name-and-logo" class="justify-content-start show-hover-pointer" onclick="location.href='/'")
             img(src=`images/logo${themeclass}.png` width="300px" style="float: right")
             br
             h1(style="float: right") NFT Swap Pool About
@@ -28,8 +28,18 @@ html
                            path(d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278zM4.858 1.311A7.269 7.269 0 0 0 1.025 7.71c0 4.02 3.279 7.276 7.319 7.276a7.316 7.316 0 0 0 5.205-2.162c-.337.042-.68.063-1.029.063-4.61 0-8.343-3.714-8.343-8.29 0-1.167.242-2.278.681-3.286z")
                         a(class=`dropdown-item ${themeclass}` href="#") Dark mode
    
-      div(class="d-flex flex-row justify-content-around padding" width="70%")
-         span This is the about page...
+      //- COPY SECTIONS BELOW AND REPLACE TEXT AS APPROPRIATE
+      //- SECTION START
+      div(class="about-section")
+         h1 About
+         span Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dolor purus non enim praesent. Elit ut aliquam purus sit amet luctus venenatis lectus magna. Adipiscing at in tellus integer feugiat scelerisque. Lobortis mattis aliquam faucibus purus in massa tempor. Quis auctor elit sed vulputate mi sit. Quis auctor elit sed vulputate mi sit amet. Augue mauris augue neque gravida in. Laoreet id donec ultrices tincidunt arcu non sodales neque. Fames ac turpis egestas maecenas pharetra convallis. Mattis vulputate enim nulla aliquet porttitor lacus luctus. Nunc sed velit dignissim sodales ut. Aliquet nibh praesent tristique magna sit amet. Varius duis at consectetur lorem.
+      //- SECTION END
+
+      //- SECTION START
+      div(class="about-section")
+         h1 Another section
+         span Sit amet mattis vulputate enim nulla aliquet porttitor lacus. Lectus nulla at volutpat diam ut. Maecenas sed enim ut sem viverra aliquet eget. At tellus at urna condimentum mattis. Vitae congue mauris rhoncus aenean vel elit scelerisque mauris. Dolor sit amet consectetur adipiscing elit duis tristique sollicitudin nibh. Ut etiam sit amet nisl purus in. Ac turpis egestas maecenas pharetra convallis. Nibh sit amet commodo nulla facilisi. In massa tempor nec feugiat nisl pretium fusce id. Eu sem integer vitae justo eget magna. Habitant morbi tristique senectus et. Posuere ac ut consequat semper viverra. Tempus iaculis urna id volutpat lacus. Eget mi proin sed libero enim sed faucibus turpis in. Ultrices dui sapien eget mi proin.
+      //- SECTION END
       
       div(class=`d-flex flex-row justify-content-between flex-nowrap link-row${themeclass}`)
             a(href="#" class=`link-row${themeclass} flex-fill padding`) ABOUT
