--- a/dapp/src/views/index.pug
+++ b/dapp/src/views/index.pug
@@ -10,7 +10,7 @@ html
    body(class=`${themeclass}`)
       div(id="topofpage")
       div(class="d-flex flex-row justify-content-around padding")
-         div(class="name-and-logo" class="justify-content-start")
+         div(class="name-and-logo" class="justify-content-start show-hover-pointer" onclick="location.href='/'")
             img(src=`images/logo${themeclass}.png` width="300px" style="float: right")
             br
             h1(style="float: right") NFT Swap Pool
