Added Dapp installation instructions and new styling for about page

--- a/dapp/public/stylesheets/styles.css
+++ b/dapp/public/stylesheets/styles.css
@@ -451,7 +451,7 @@ a.connect-buttondark-mode {
 
 .about-section {
     text-align: left; 
-    margin-left: 2cm;
-    margin-right: 2cm;
+    margin-left: 15%;
+    margin-right: 15%;
     margin-bottom: 0.5cm;
 }
